# xsamples

./: .gitmodules  CMakeLists.txt
apps/assetexplorer/src/: assetexplorer.hpp  main.cpp
apps/sample0/src/: sample0.hpp
apps/sample0/src/gui/: stringformat.hpp
apps/sample0/src/systems/: playerinputsystem.hpp  transformanimationsystem.hpp
cmake/: assetexplorer.cmake  sample.cmake  sample0.cmake  samples.cmake
sample0/: scene.json
sample0/src/: main.cpp  sample0.hpp  sampleapplication.hpp
sample0/src/components/: playercontrollercomponent.hpp  transformanimationcomponent.hpp
sample0/src/gui/: debugwindow.hpp  stringformat.hpp
sample0/src/systems/: playerinputsystem.hpp  transformanimationsystem.hpp
